<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OfficeViewer</string>
    <string name="app_name_settings">LibreOffice Viewer Settings</string>

    <string name="app_version">Version: %1$s&lt;br&gt;Build ID: &lt;a href=&quot;https://hub.libreoffice.org/git-core/%2$s&quot;&gt;%2$s&lt;/a&gt;</string>
    <string name="app_description">LibreOffice Viewer is a document viewer based on LibreOffice.</string>
    <string name="app_credits">https://www.libreoffice.org</string>
    <string name="app_vendor">This release was supplied by $VENDOR.</string>
    <string name="readonly_file">This file is read-only.</string>

    <string name="about_license">Show License</string>
    <string name="about_notice">Show Notice</string>
    <string name="about_privacy_policy">Privacy Policy</string>

    <string name="create_file">Create New File</string>
    <string name="new_textdocument">New Text Document</string>
    <string name="new_presentation">New Presentation</string>
    <string name="new_spreadsheet">New Spreadsheet</string>
    <string name="new_drawing">New Drawing</string>
    <string name="default_document_name">untitled</string>

    <string name="select_file_to_open">Select file to open</string>

    <string name="search_find_next">Find Next</string>
    <string name="search_find_previous">Find Previous</string>
    <string name="file_icon_desc">fileicon</string>
    <string name="title_recents">Recent files</string>
    <string name="title_browser">All files</string>
    <string name="pref_category_general">General</string>
    <string name="pref_experimental_editing">Experimental Mode</string>
    <string name="pref_experimental_editing_summary">Enable the experimental editing mode. Use at your own risk.</string>
    <string name="pref_developer_mode">Developer Mode</string>
    <string name="pref_developer_mode_summary">Enable developer mode where you can send UNO commands within app. Use at your own risk.</string>

    <string name="action_about">About</string>
    <string name="action_parts">Parts</string>
    <string name="action_settings">Settings</string>

    <!-- Edit action names -->
    <string name="action_keyboard">Show keyboard</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As…</string>
    <string name="action_fromat">Enable Format</string>
    <string name="action_search">Search</string>
    <string name="action_UNO_commands">Send UNO Cmd</string>

    <!-- Feedback messages -->
    <string name="message_saved">Save complete</string>
    <string name="message_saving">Saving the document…</string>
    <string name="message_saving_failed">Saving the document failed.</string>

    <string name="password">Password</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>

    <!-- Save Alert dialog strings -->
    <string name="save_alert_dialog_title">Save the document before closing?</string>
    <string name="save_document">SAVE</string>
    <string name="action_cancel">Cancel</string>
    <string name="no_save_document">NO</string>

    <!-- Presentation Mode Strings -->
    <string name="action_presentation">Slide show</string>
    <string name="action_add_slide">Add Slide</string>
    <string name="slideshow_action_back">Back</string>

    <!-- Calc Header Menu Strings -->
    <string name="calc_insert_before">Insert</string>
    <string name="calc_delete">Delete</string>
    <string name="calc_hide">Hide</string>
    <string name="calc_show">Show</string>
    <string name="calc_optimal_length">Optimal Length</string>
    <string name="calc_adjust_length">Adjust Length</string>
    <string name="calc_adjust_height">Adjust Height</string>
    <string name="calc_adjust_width">Adjust Width</string>
    <string name="calc_optimal_height">Optimal Height</string>
    <string name="calc_optimal_width">Optimal Width</string>
    <string name="calc_optimal_length_confirm">OK</string>
    <string name="calc_optimal_length_default_text">Enter Extra Length in 100th/mm</string>
    <string name="calc_alert_double_click_optimal_length">Hint: Double tap on a header sets optimal width/height.</string>
    <string name="action_add_worksheet">Add Worksheet</string>

    <!-- Password dialog strings -->
    <string name="action_pwd_dialog_OK">OK</string>
    <string name="action_pwd_dialog_cancel">Cancel</string>
    <string name="action_pwd_dialog_title">Please enter password</string>

    <!-- Insert Image Strings -->
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="select_photo_title">Select Picture</string>
    <string name="no_camera_found">No Camera Found</string>
    <string name="compress_photo_smallest_size">Smallest Size</string>
    <string name="compress_photo_medium_size">Medium Size</string>
    <string name="compress_photo_max_quality">Max Quality</string>
    <string name="compress_photo_no_compress">Don\'t Compress</string>
    <string name="compress_photo_title">Do you want to compress the photo?</string>

    <!-- Clipboard Actions -->
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_cut">Cut</string>
    <string name="action_back">Back</string>
    <string name="action_text_copied">Text copied to the clipboard</string>
    <string name="insert_table">Insert table</string>
    <string name="select_insert_options">Select insert options:</string>
    <string name="select_delete_options">Select delete options:</string>
    <string name="action_rename_worksheet">Rename worksheet</string>
    <string name="action_delete_worksheet">Delete worksheet</string>
    <string name="action_delete_slide">Delete slide</string>
    <string name="name_already_used">Given name is already being used.</string>
    <string name="part_name_changed">Part name has been changed.</string>
    <string name="part_deleted">Part has been deleted.</string>
    <string-array name="insertrowscolumns">
        <item>Insert Rows Before</item>
        <item>Insert Rows After</item>
        <item>Insert Columns Before</item>
        <item>Insert Columns After</item>
        <item>Insert Table</item>
    </string-array>
    <string-array name="deleterowcolumns">
        <item>Delete Rows</item>
        <item>Delete Columns</item>
        <item>Delete Table</item>
    </string-array>

    <!-- UNO cmd controller Strings -->
    <string name="UNO_commands_string_hint">UNO Command</string>
    <string name="UNO_commands_string_type_hint">Type</string>
    <string name="UNO_commands_string_value_hint">Value</string>
    <string name="UNO_commands_string_parent_value_hint">Parent Value</string>
    <string name="action_exportToPDF">Export To PDF</string>
    <string name="action_print">Print</string>
    <string name="tabhost_character">Character</string>
    <string name="tabhost_paragraph">Paragraph</string>
    <string name="tabhost_insert">Insert</string>
    <string name="tabhost_style">Style</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="current_uno_command">Current UNO command</string>
    <string name="pdf_export_finished">PDF export finished</string>
    <string name="unable_to_export_pdf">Unable to export to pdf</string>
    <string name="unable_to_save">Unable to save file</string>
    <string name="error">Error</string>
    <string name="enter_part_name">Enter a part name</string>
    <string name="bmp_null">Bmp is null!</string>
    <string name="page">Page</string>
    <string name="sheet">Sheet</string>
    <string name="slide">Slide</string>
    <string name="part">Part</string>
    <string name="highlight_color">Highlight Color</string>
    <string name="font_color">Font Color</string>
    <string name="action_rename_slide">Rename Slide</string>
    <string name="automatic">Automatic</string>
</resources>
