<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.libreoffice.MainActivity">

    <group
        android:id="@+id/group_edit_actions"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_undo"
            android:icon="@drawable/ic_undo"
            android:orderInCategory="100"
            android:title="@string/action_undo"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_redo"
            android:icon="@drawable/ic_redo"
            android:orderInCategory="100"
            android:title="@string/action_redo"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_keyboard"
            android:icon="@drawable/ic_keyboard"
            android:orderInCategory="100"
            android:title="@string/action_keyboard"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_format"
            android:icon="@drawable/ic_text_format"
            android:orderInCategory="100"
            android:title="@string/action_fromat"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_UNO_commands"
            android:orderInCategory="100"
            android:title="@string/action_UNO_commands" />

    </group>

    <group
        android:id="@+id/group_misc_actions"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_save"
            android:orderInCategory="100"
            android:title="@string/action_save"
            android:visible="true" />

        <item
            android:id="@+id/action_save_as"
            android:orderInCategory="100"
            android:title="@string/action_save_as"
            android:visible="true" />

        <item
            android:id="@+id/action_exportToPDF"
            android:orderInCategory="100"
            android:title="@string/action_exportToPDF"
            android:visible="true" />

        <item
            android:id="@+id/action_print"
            android:orderInCategory="100"
            android:title="@string/action_print"
            android:visible="true" />

    </group>

    <group
        android:id="@+id/group_spreadsheet_options"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_add_worksheet"
            android:orderInCategory="100"
            android:title="@string/action_add_worksheet"
            android:visible="false" />

        <item
            android:id="@+id/action_rename_worksheet"
            android:orderInCategory="100"
            android:title="@string/action_rename_worksheet"
            android:visible="false" />

        <item
            android:id="@+id/action_delete_worksheet"
            android:orderInCategory="100"
            android:title="@string/action_delete_worksheet"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/group_presentation_options"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_add_slide"
            android:orderInCategory="100"
            android:title="@string/action_add_slide"
            android:visible="false" />
        <item
            android:id="@+id/action_rename_slide"
            android:orderInCategory="100"
            android:title="@string/action_rename_slide"
            android:visible="false" />

        <item
            android:id="@+id/action_delete_slide"
            android:orderInCategory="100"
            android:title="@string/action_delete_slide"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/group_edit_clipboard"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/action_back"
            android:icon="@drawable/ic_arrow_back_24dp"
            android:orderInCategory="1"
            android:title="@string/action_back"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_copy"
            android:icon="@drawable/ic_content_copy_24dp"
            android:orderInCategory="2"
            android:title="@string/action_copy"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_cut"
            android:icon="@drawable/ic_content_cut_24dp"
            android:orderInCategory="3"
            android:title="@string/action_cut"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_paste"
            android:icon="@drawable/ic_content_paste_24dp"
            android:orderInCategory="4"
            android:title="@string/action_paste"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_presentation"
        android:orderInCategory="100"
        android:title="@string/action_presentation"
        android:visible="false" />

    <item
        android:id="@+id/action_parts"
        android:orderInCategory="100"
        android:title="@string/action_parts" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings" />
</menu>
